cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    AoCPrelude
    Day1
    Day2
    Day3
    Day4
    Day5
    Day6
  build-depends:
    base ^>=4.16.3.0,
    containers,
    extra,
    flow,
    megaparsec,
    string-interpolate,
    vector
                      
  default-language: GHC2021